@@ -4,14 +4,16 @@ all_from 'lib/Net/Redmine.pm';
 
 requires
     "Any::Moose"                    => "0.07",
+    "Encode"                        => "2.31",
     "HTML::WikiConverter"           => "0.68",
     "HTML::WikiConverter::Markdown" => "0.05",
     "IO::All"                       => "0.39",
     "WWW::Mechanize"                => "1.52",
-    "pQuery"                        => "0.07",
-    "Encode"                        => "2.31";
+    "pQuery"                        => "0.07";
 
-build_requires "Test::More" => "0.86";
+build_requires
+    "Quantum::Superpositions" => "1.03",
+    "Test::More"              => "0.86";
 
 repository 'http://github.com/gugod/net-redmine';
 
