@@ -1,6 +1,7 @@
 0.04:
   - Implement ticket deletion
   - Implement ticket refresh method
+  - Implement ticket search
 
 0.03:
   - Implement ticket status changes
